--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ h2 {
     font-family: 'Spartan', sans-serif;
     font-size: 72px;
     text-align: center;
-    transition: font-size 1s;
     color: white;
-    animation-name: titleAnimation;
 }
 
 table {
@@ -46,4 +44,11 @@ h1:hover{
 a {
     text-decoration: none;
     color: white;
+}
+
+.preview {
+    text-align: center;
+    font-size: 50px;
+    color: white;
+    padding: 5%;
 }
