--- a/style.css
+++ b/style.css
@@ -5,40 +5,27 @@ body {
     background-color: #1f1f1f;
 }
 
-
-h1 {
-    text-align: center;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 50px;
-    transition: font-size 0.5s;
-    color: white;
-}
-
 h2 {
     font-family: 'Spartan', sans-serif;
     font-size: 72px;
     text-align: center;
     color: white;
+    padding: 10px;
+    margin: 0;
+    margin-top: 5%;
 }
 
 table {
-    border: 5px solid white;
-    border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
 }
 
 th {
-    padding: 20px;
+    padding: 10px;
 }
 
 li {
     list-style-type: none;
-}
-
-h1:hover{
-    font-size: 55px;
-    transition: font-size 0.5s;
 }
 
 a {
@@ -46,9 +33,34 @@ a {
     color: white;
 }
 
-.preview {
+button {
+    border: none;
+    background-color: transparent;
     text-align: center;
-    font-size: 50px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 30px;
+    transition: opacity 0.5s;
     color: white;
-    padding: 5%;
+    margin: none;
+    opacity: 100;
+}
+
+button:hover {
+    opacity: 50%;
+    transition: opacity 0.5s;
+}
+
+.container {
+    display: none;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 30px;
+    transition: font-size 0.5s;
+    color: white;
+    margin: none
 }
